--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^2.1.1
   flutter_config: ^2.0.0
+  flutter_svg: ^0.23.0+1
+  google_maps_flutter: ^2.1.1
+  permission_handler: ^8.3.0
 
 dev_dependencies:
   flutter_test:
