--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.0
   flutter_config: ^2.0.0
   flutter_svg: ^0.23.0+1
   geolocator: ^7.7.1
