--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_bloc: ^8.0.0
   flutter_config: ^2.0.0
   flutter_svg: ^0.23.0+1
+  intl: ^0.17.0
   geolocator: ^7.7.1
   get_it: ^7.2.0
   google_maps_flutter: ^2.1.1
